Create whitespace between gallery and next stuff

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 							<img src="images/banner.jpg" alt="" />
 						</div>
 					</section>
+
+					<!-- Text area and gallery -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
@@ -185,6 +187,12 @@
 							</div>
 
 					</section>
+					<!-- Empty space cause it looks nice -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+						</div>
+					</section>
+
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
