--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 						<div class="content">
 							<h1>About</h1>
 							<p class="major">Verdio Underground: breaking classical music since 2013
+								            
+							<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button large wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -232,7 +234,6 @@
 									</div>
 								</article>
 							</div>
-
 					</section>
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
