--- a/index-demo.html
+++ b/index-demo.html
@@ -28,11 +28,11 @@
 					<ul class="actions stacked">
 						<li><a href="#first" class="button large wide smooth-scroll-middle">Get Started</a></li>
 					</ul>
-				</div>
-				<div class="image">
-					<img src="images/banner.jpg" alt="" />
-				</div>
-			</section>
+			</div>
+			<div class="image">
+				<img src="images/banner.jpg" alt="" />
+			</div>
+		</section>
 			
 			<!-- Spotlight -->
 			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
@@ -240,7 +240,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 					<div class="items style1 medium onscroll-fade-in">
 						<section>
-							<span class="icon style2 major fa-gem"></span>
+							<i class="icon style2 major fa-solid fa-music"></i>
 							<h3>Music</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 						</section>
@@ -274,8 +274,9 @@
 							<header>
 								<h3>Contact</h3>
 							</header>
+							<br>
+							</section>
 							<div class="content">
-								
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
