Add spotify logo

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-wifi"><span class="label">Email</span></a></li>
+								<li><a href="#" class="icon brands style2 fa-spotify"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Verdio Underground Productions GmbH 2023. All rights reserved</a>.</p>
 						</div>
