--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 										<input type="text" name="name" id="name" value="" />
 									</div>
 									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
+										<label for="email">Email *</label>
+										<input type="email" name="email" id="email" value="" required />
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
