Added links to platform icons

--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-youtube"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-spotify"><span class="label">Email</span></a></li>
+								<li><a href="https://www.Twitter.com/thecastmusic/" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/thecastofficial" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/thecastmusic/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://soundcloud.com/thecastmusic-com" class="icon brands style2 fa-soundcloud"><span class="label">Soundcloud</span></a></li>
+								<li><a href="https://www.youtube.com/thecastde" class="icon brands style2 fa-youtube"><span class="label">youtube</span></a></li>
 							</ul>
 							<p>&copy; Verdio Underground Productions GmbH 2023. All rights reserved</a>.</p>
 						</div>
