Add required star to email

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 										<input type="text" name="name" id="name" value="" />
 									</div>
 									<div class="field half">
-										<label for="email">Email *</label>
+										<label for="email">Email <span class="required">*</span></label>
 										<input type="email" name="email" id="email" value="" required />
 									</div>
 									<div class="field">
