--- a/index.html
+++ b/index.html
@@ -260,6 +260,13 @@
 						</div>
 					</section>
 
+					<section class="wrapper style1 align-center">
+                        <div class="inner">
+                            <h2>Additional Elements</h2>
+                            <p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
+                            <div class="index align-left">
+					</section>
+
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
