--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
 										<label for="message">Message</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
+									<div class="field half">
+										<input type="checkbox" id="human" name="human" checked="">
+										<label for="human">I am a human and not a robot</label>
+									</div>
 								</div>
 								<ul class="actions special">
 									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
