Make forms sheet work

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Contact</h2>
-							<form method="post" action="#">
+							<form  action="https://formspree.io/f/xpzeqzng" method="POST">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
